--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -8,12 +8,14 @@
 
     <include layout="@layout/content_song_list" />
 
+    <!-- Floating Now Playing button -->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/category_playing"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
 </android.support.design.widget.CoordinatorLayout>
