--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.android.musicalstructureapp.SongListActivity">
 
-    <include layout="@layout/content_song_list" />
+    <ListView
+
+        android:id="@+id/song"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="com.example.android.musicalstructureapp.SongListActivity" />
 
     <!-- Floating Now Playing button -->
     <android.support.design.widget.FloatingActionButton
@@ -17,5 +27,9 @@
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/category_playing"
         app:srcCompat="@android:drawable/ic_media_play" />
+</RelativeLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+
+
+
+
