--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.android.musicalstructureapp.SongListActivity">
+    android:orientation="vertical">
 
 
-    <!-- Menu -->
+    <!-- Top Menu -->
     <LinearLayout
         android:id="@+id/menu"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/fab_margin"
         android:layout_alignParentTop="true"
         android:background="@color/tan_background"
-        android:orientation="horizontal"
-        tools:context="com.example.android.musicalstructureapp.MainActivity">
+        android:orientation="horizontal">
 
 
         <TextView
@@ -45,17 +42,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/player"
-        android:layout_below="@+id/menu" />
+        android:layout_below="@+id/menu"
+        android:drawSelectorOnTop="true" />
 
     <!-- Player -->
     <LinearLayout
         android:id="@+id/player"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/fab_margin"
         android:layout_alignParentBottom="true"
         android:background="@color/category_playing"
-        android:orientation="horizontal"
-        tools:context="com.example.android.musicalstructureapp.MainActivity">
+        android:orientation="horizontal">
 
 
         <TextView
@@ -63,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Now playing:" />
+            android:text="@string/player_now_playing_title" />
 
         <TextView
             android:id="@+id/now_playing"
@@ -73,7 +70,7 @@
             android:gravity="center"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:text="Pick your poison..."
+            android:text="@string/player_default_message"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
@@ -81,12 +78,7 @@
     <!-- Floating action button -->
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp"
-        android:layout_marginStart="13dp"
+        style="@style/FloatingActionButtonStyle"
         app:backgroundTint="@color/category_playing"
         app:srcCompat="@android:drawable/ic_media_play" />
 </RelativeLayout>
