--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <!-- Top Menu -->
     <LinearLayout
         android:id="@+id/menu"
@@ -13,7 +12,6 @@
         android:layout_height="@dimen/fab_margin"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
-
 
         <TextView
             android:id="@+id/song_list"
@@ -35,7 +33,7 @@
 
     </LinearLayout>
 
-    <!-- Selector -->
+    <!-- Selector with list_view content-->
     <ListView
         android:id="@+id/song"
         android:layout_width="match_parent"
@@ -44,7 +42,7 @@
         android:layout_below="@+id/menu"
         android:drawSelectorOnTop="true" />
 
-    <!-- Player -->
+    <!-- Player on the bottom -->
     <LinearLayout
         android:id="@+id/player"
         android:layout_width="match_parent"
