--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,14 @@
         <item name="android:layout_alignParentStart">true</item>
         <item name="android:layout_marginBottom">40dp</item>
         <item name="android:layout_marginStart">14dp</item>
+    </style>
+
+    <style name="ListViewPlayEuroButton">
+         <item name="android:layout_height">24dp</item>
+        <item name="android:layout_width">24dp</item>
+        <item name="android:layout_alignParentEnd">true</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_marginEnd">16dp</item>
 
     </style>
 
