--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,11 @@
     <dimen name="fab_margin">60dp</dimen>
     <dimen name="list_item_height">88dp</dimen>
     <dimen name="list_item_width">22dp</dimen>
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">1dp</dimen>
+    <dimen name="big_padding">16dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
+    <dimen name="medium_text_size">18sp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
+    <dimen name="fab_bottom_margin">40dp</dimen>
+    <dimen name="fab_start_margin">14dp</dimen>
+    <dimen name="play_pause_button_size">24dp</dimen>
 </resources>
